# EPDG

./: README.md
kinova-ros/kinova_bringup/launch/: kinova_robot.launch
kinova-ros/kinova_description/: CMakeLists.txt
kinova-ros/kinova_description/assembly/launch/: display.launch
kinova-ros/kinova_description/assembly/meshes/: assembly.STL  final_assembly.STL  gazebo_assembly.STL
kinova-ros/kinova_description/assembly/urdf/: assembly.csv  assembly.urdf
kinova-ros/kinova_description/launch/: system_display.launch
kinova-ros/kinova_description/rviz/: display.rviz
kinova-ros/kinova_description/urdf/: j2n6s300.xacro  kinova_common.xacro  new_kinova.urdf  robot.urdf
kinova-ros/kinova_driver/src/: kinova_arm.cpp  kinova_joint_angles_action.cpp
kinova-ros/kinova_leaphand_moveit/: .setup_assistant  CMakeLists.txt  eef.py  package.xml
kinova-ros/kinova_leaphand_moveit/config/: fake_controllers.yaml  gazebo_j2n6s300.urdf  j2n6s300.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
kinova-ros/kinova_leaphand_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  (+15 more)
leap_hand_utils/: dynamixel_client.py
telekinesis/: teleoperation_dataset_recording.py
telekinesis/leap_hand_mesh_right/: robot_pybullet.urdf
telekinesis/oculus_reader/: CMakeLists.txt  package.xml  setup.py
telekinesis/oculus_reader/config/: oculus_reader.rviz
telekinesis/oculus_reader/launch/: exe.launch
telekinesis/oculus_reader/scripts/: reader.py  visualize_oculus_transforms.py
(+1 files in other folders)
